# bot_telegram_notion

./: .example.env  .gitignore  Cargo.toml  bugs.md  dockerfile
src/: main.rs  notion.rs  routes.rs  state.rs  telegram.rs
src/handlers/: manager.rs
src/models/: mod.rs  notion.rs  telegram.rs
src/services/: gemini.rs  jobs.rs  mod.rs  notion.rs  telegram.rs
