[package]
name = "notion"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4" # Vital para manejar la fecha de "hoy"
dotenvy = "0.15" 
tokio-cron-scheduler = "0.10"